[package]
name = "uplot-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "uPlot'un yerli Rust portu"
license = "Apache-2.0"
repository = "https://github.com/hakantr/uPlot.rs"

[workspace]
members = ["wasm", "uygulamalar/masaustu"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

[features]
default = ["svg"]
svg = []
wasm = ["svg"]
gpui = ["dep:gpui"]

[dependencies]
gpui = { version = "0.2.2", path = "../gpui/crates/gpui", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-time = "1.1.0"

[[example]]
name = "resize"
required-features = ["svg"]

[[example]]
name = "add_del_series"
required-features = ["svg"]

[[example]]
name = "align_data"
required-features = ["svg"]

[[example]]
name = "area_fill"
required-features = ["svg"]

[[example]]
name = "scale_padding"
required-features = ["svg"]

[[example]]
name = "zoom_wheel"
required-features = ["svg"]

[[example]]
name = "zoom_touch"
required-features = ["svg"]

[[example]]
name = "months"
required-features = ["svg"]

[[example]]
name = "cursor_snap"
required-features = ["svg"]

[[example]]
name = "cursor_bind"
required-features = ["svg"]

[[example]]
name = "cursor_tooltip"
required-features = ["svg"]

[[example]]
name = "custom_scales"
required-features = ["svg"]

[[example]]
name = "data_smoothing"
required-features = ["svg"]

[[example]]
name = "draw_hooks"
required-features = ["svg"]

[[example]]
name = "focus_cursor"
required-features = ["svg"]

[[example]]
name = "gradients"
required-features = ["svg"]

[[example]]
name = "missing_data"
required-features = ["svg"]

[[example]]
name = "dependent_scale"
required-features = ["svg"]

[[example]]
name = "arcsinh_scales"
required-features = ["svg"]

[[example]]
name = "axis_control"
required-features = ["svg"]

[[example]]
name = "axis_autosize"
required-features = ["svg"]

[[example]]
name = "axis_indicators"
required-features = ["svg"]

[[example]]
name = "bars_grouped_stacked"
required-features = ["svg"]

[[example]]
name = "bars_values_autosize"
required-features = ["svg"]

[[example]]
name = "box_whisker"
required-features = ["svg"]

[[example]]
name = "candlestick_ohlc"
required-features = ["svg"]
