[package]
name = "uplot-rs-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uplot-rs = { path = "..", default-features = false, features = ["wasm"] }
wasm-bindgen = "=0.2.120"

[lints]
workspace = true
